--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: '一剑霜寒十四州'
-subheading: '个人博客'
+heading: 'Your awesome heading'
+subheading: 'Your awesome subheading'
 banner: 'default'
 ---
 
