--- a/_includes/extensions/google-analytics.html
+++ b/_includes/extensions/google-analytics.html
@@ -1,4 +1,4 @@
-<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
   function initGoogleAnalytics() {
     var doNotTrack = (window.doNotTrack === "1" || navigator.doNotTrack === "1" ||
@@ -6,22 +6,12 @@
     var enableDNT = "{{ site.enableDNT | default: true }}" == "true";
 
     if (!enableDNT || !doNotTrack) {
-      var measurementId = '{{ site.google_analytics }}';
-
-      (function(src) {
-        var tag = document.createElement('script');
-        tag.src = src;
-        tag.async = true;
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-      })('https://www.googletagmanager.com/gtag/js?id=' + measurementId);
-
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag(){window.dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', measurementId);
-    }
+
+      gtag('config', '{{ site.google_analytics }}');
+        }
   }
   window.addEventListener("load", initGoogleAnalytics);
 </script>
-
