--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -3,6 +3,7 @@
 
   <div class="wrapper">
     <div class="site-footer-inner">
+      <div>{% include social.html %}</div>
         {%- assign currentYear = 'now' | date: "%Y" -%}
         {%- assign copyright = site.copyright
             | replace: '{currentYear}', currentYear
